# CMAL

./: pyproject.toml  train_Food_11_ResNet50.py  train_iCartoonFace_ResNet50.py
